2008-10-17  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-13
	* use timeout for LS in scalers access (cond_timedwait)
	* enable use of gtpe orbit/bx and ls
	* requires EventFilter/Utilities V00-14-16-01 or later (see changelog)
	
2008-06-03  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-05
	* fill orbit and bx id from GT EVM block, needs EventFilter/Utilities V00-14-12	

2008-06-03  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-04
	* added access from xdaq and locks to get hold of hlt counters, and ls,ps id

2008-03-14  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-05-04
	* get LS id from L1 EVM block
	
2008-01-29  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-05-02
	* fix generation of timestamp from gettimeofday
	* many fixes by Bill not reported here from intermediate tags
	
2007-10-05  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-02-02
	* fix bug in DaqSource::readLuminosityBlock_ causing a crash when run is ended without 
	* a single event having reached the EP

2007-08-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-05-00
	* standardized parameters
	
2007-04-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-04-00
	* reorganization of code for new plugin manager
	* added parameter to generate LSid (placeholder for correct handling)
	* corrected handling of exceptions from reader
	* added plugin factory without pset argument
	
2007-03-07  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* adjust to reorganization of FWCore

2006-11-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* src/DaqFakeReader.cc (fillFEDs): include <cmath> and change
	  log -> std::log and exp -> std::exp for slc4/gcc3.4.5 compliance.

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* change interface of DaqBaseReader: pass a pointer reference (not
	a reference) to fillRawData() in order to allow for an allready